--- a/package.json
+++ b/package.json
@@ -1,13 +1,9 @@
 {
-  "name": "linecraft-process-automation",
+  "name": "trello-bug-automation",
   "version": "1.0.0",
-  "description": "Trello webhook automation for bug comments",
   "private": true,
-  "type": "commonjs",
-  "scripts": {
-    "build": "echo \"No build step required\""
-  },
   "dependencies": {
-    "node-fetch": "^2.7.0"
-  }
+    "node-fetch": "^3.3.1"
+  },
+  "type": "module"
 }
