--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -1,9 +1,15 @@
 {
   "manifest_version": 3,
   "name": "Benchwarmer",
-  "version": "1.0.0",
-  "permissions": ["sidePanel", "activeTab", "tabs"],
+  "version": "1.4.0",
+  "permissions": ["sidePanel", "activeTab", "tabs", "desktopCapture", "debugger", "scripting"],
   "host_permissions": ["<all_urls>"],
+  "content_scripts": [
+    {
+      "matches": ["<all_urls>"],
+      "js": ["content.js"]
+    }
+  ],
   "side_panel": { "default_path": "sidepanel.html" },
   "background": { "service_worker": "background.js" },
   "action": { "default_title": "Open Reporter" }
