--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -1,23 +1,20 @@
 {
   "manifest_version": 3,
-  "name": "Trello Bug Reporter Pro",
-  "version": "1.5.0",
-  "description": "One-click bug reporting with full-screen video and image capture.",
+  "name": "Herder",
+  "version": "2.0.0",
   "permissions": [
     "sidePanel",
     "storage",
     "tabs",
     "activeTab",
-    "desktopCapture"
+    "desktopCapture",
+    "identity"
   ],
-  "host_permissions": ["<all_urls>"],
-  "side_panel": {
-    "default_path": "sidepanel.html"
-  },
-  "action": {
-    "default_title": "Open Reporter"
-  },
-  "background": {
-    "service_worker": "background.js"
-  }
+  "host_permissions": [
+    "<all_urls>",
+    "https://*.supabase.co/*"
+  ],
+  "side_panel": { "default_path": "sidepanel.html" },
+  "background": { "service_worker": "background.js" },
+  "action": { "default_title": "Open Reporter" }
 }
