feat: domain restrictions for login

--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -19,7 +19,7 @@
     "default_path": "sidepanel.html"
   },
   "action": {
-    "default_title": "Open Reporter"
+    "default_title": "Open Recorder"
   },
   "background": {
     "service_worker": "background.js"
